# Agentic-Verification-Triage-System

./: .gitmodules  Agentic_Verification_Triage_System_Proposal.md  README.md  pyproject.toml
.github/workflows/: ci.yml
real_data/picorv32_patches/: start_single.S
scripts/: generate_dashboard.py  run_real_data_pipeline.py  run_single_picorv32_test.sh
tests/: _shared_signatures.py  test_clusterer.py  test_coverage_parser.py  test_critic.py  test_dashboard.py  test_drafter.py  test_log_signature.py  test_pipeline.py  test_real_data_integration.py  test_regression_parser.py
tests/fixtures/: coverage_report.txt
triage/: __init__.py  dashboard.py  dashboard_template.html  models.py  pipeline.py
triage/agents/: __init__.py  clusterer.py  critic.py  drafter.py
triage/parsing/: __init__.py  coverage_parser.py  log_signature.py  regression_parser.py
