[project]
name = "verification-triage"
version = "0.1.0"
description = "Agentic Verification Triage System — UVM/SystemVerilog coverage triage and bug prioritization, built on AgentMesh."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["triage*"]
